Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-4635

Fix HostDB file descriptor handling

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 7.0.0
    • HostDB
    • None

    Description

      Various file descriptor handling bugs syncing HostDB.

      1. RefCountCacheSerializer::fd is initialized to 0 rather than -1
      2. RefCountCacheSerializer::initialize_storage checks for fd <= 0 rather than -1
      3. Any time the RefCountCacheSerializer is deleted it leaks the file descripto.
      4. Leaks on error paths in RefCountCacheSerializer::finalize_sync()

      There is a fd leak somewhere:

      [ET_NET 23444 nmadmin   32u   REG              202,1         12   524318 /n/trafficserver/var/host.db.syncing
      

      Attachments

        Issue Links

          Activity

            People

              jamespeach James Peach
              jamespeach James Peach
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: