TS-4635: Fix RefCountCacheSerializer file descriptor error path.

Simplify RefCountCacheSerializer::finalize_sync() and consistently
propagate the error to the caller as -errno so we can log any errors
in the caller. Retail the open file descriptor on error.

Close the open file descriptor and deliver the completion event in
the serializer destructor. This handles the error case.